RESOLVED FIXED87589
[BlackBerry] Crash when deleting WebPageCompositor
https://bugs.webkit.org/show_bug.cgi?id=87589
Summary [BlackBerry] Crash when deleting WebPageCompositor
Arvid Nilsson
Reported 2012-05-27 06:49:33 PDT
PR #156444
Attachments
Patch (4.04 KB, patch)
2012-05-27 06:54 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-05-27 06:54:41 PDT
Rob Buis
Comment 2 2012-05-27 06:59:56 PDT
Comment on attachment 144232 [details] Patch Looks good.
WebKit Review Bot
Comment 3 2012-05-27 07:55:08 PDT
Comment on attachment 144232 [details] Patch Clearing flags on attachment: 144232 Committed r118627: <http://trac.webkit.org/changeset/118627>
WebKit Review Bot
Comment 4 2012-05-27 07:55:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.