Source/WebKit/blackberry/Api/WebPageCompositor_p.h
@@ -82,6 +82,7 @@ public:
     void releaseLayerResources();
 
     WebPagePrivate* page() const { return m_webPage; }
+    void setPage(WebPagePrivate* page) { m_webPage = page; }
     WebPageCompositorClient* client() const { return m_client; }
     void compositorDestroyed();
 
